2013-05-10  Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: updated comments.
	* dmbr_report_cell_expt.m: same.
	* dmbr_adjust_breakpoint.m: same.
	* dmbr_locate_trackfile: same.

2013-04-01  Jeremy Cribb <jcribb@email.unc.edu>
	* dmbr_locate_trackfile.m: added on the behalf of Christian Stith.  It finds a matching tracking file in the current directory.
	* dmbr_adjust_breakpoint: added.  This changlog claims this file was added on 03-15 but when updating CVS has no knowledge of the function's existence.   Adding it now.

2013-03-15 Christian Stith <chstith@ncsu.edu>
    * dmbr_adjust_breakpoint: added. implements a breakpoint-changing function for use with multi-file report.
    * dmbr_multi_file_report: edited to accommodate dmbr_adjust_breakpoint.
    * dmbr_report_cell_expt: same.

2013-02-01 Christian Stith <chstith@ncsu.edu>
	* dmbr_multi_file_report.m: implemented functionality for g ratios in the html report, along with the option for this in the gui.
	* dmbr_report_cell_expt.m: same.

2012-12-05 Ben Rardin <rardinb@live.unc.edu>
	*dmbr_report_cell_expt: added force response values to the html file that the function generates.

2012-10-24 Ben Rardin <rardinb@live.unc.edu>
	*dmbr_multi_file_report: bug fixed. The excel report created by the GUI now generates the correct "G ratios" when data has been filtered  (removal of certain beads, pulls, etc.) and re-run in the multifilereport GUI.

2012-10-08 Ben Rardin <rardinb@live.unc.edu>
	* dmbr_mf_concat: bug fixed. No longer is necessary to delete end of file characters in the created seqdat.txt file

2012-10-04 Christian Stith <chstith@ncsu.edu>
	* dmbr_mf_concat: added. concatenates multiple *.seqdat.txt files into one. functional; known bug described in header.

2012-08-13 Christian Stith <chstith@ncsu.edu>
	* multi_file_report_readme.txt: added. comprehensive MFR user guide.
	* dmbr_adjust_report.m: finalized comment header.
	* dmbr_multi_file_report.m: same.
	* dmbr_report_cell_expt.m: same.